<resources>
    <string name="app_name">健康测量</string>
    <string name="sex_unknown">未知的性别</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="sex_unsay">未说明的性别</string>
    <string name="quickly">快速检测</string>
    <string name="ecg">心电</string>
    <string name="spo2">血氧</string>
    <string name="bp">血压</string>
    <string name="glu">血糖</string>
    <string name="ua">尿酸</string>
    <string name="total_cho">总胆固醇</string>
    <string name="temp">体温</string>
    <string name="wbc">白细胞</string>
    <string name="urine">尿常规</string>
    <string name="hb">血红蛋白</string>
    <string name="hba1c">糖化血红蛋白</string>
    <string name="blood_fat">血脂</string>
    <string name="weight">体重</string>
    <string name="height">身高</string>
    <string name="start_measure">启动测量</string>
    <string name="stop_measure">停止测量</string>
    <string name="pls_start_measure">请启动测量</string>
    <string name="doing_measure">正在测量中</string>
    <string name="measure_success">测量成功</string>
    <string name="measure_result">诊断结果</string>
    <string name="trend_statistics">趋势统计</string>
    <string name="measure_timeout">测量失败，测量超时</string>
    <string name="please_start_service">请启动服务</string>
    <string name="please_lead_line">请插入导联线</string>
    <string name="invalid_data">-?-</string>
    <string name="colon">:</string>
    <string name="ksm5">KSM5</string>
    <string name="look_tutorial_video">观看操作视频</string>
    <string name="age">岁</string>
    <string name="idcard_colon">身份证:</string>
    <string name="measure_time_colon">测量时间:</string>
    <string name="flag_value_high">↑</string>
    <string name="flag_value_low">↓</string>
    <string name="pr_cn">脉率</string>
    <string name="health_unit_bpm">bpm</string>
    <string name="ten_results">最近十次-结果统计</string>
    <string name="dialog_table">趋势表</string>
    <string name="dialog_pic">趋势图</string>
    <string name="serial">序号</string>
    <string name="measure_time">测量时间</string>
    <string-array name="patient_type_array">
        <item>成人</item>
        <item>小儿</item>
        <item>婴幼儿</item>
    </string-array>
    <string name="ecg_checking">测量心电中，请等候 </string>
    <string name="ecg_check_complited">恭喜，测量完成</string>
    <string name="ecg_getHr_success">恭喜，获取心率成功</string>
    <string name="ecg_check_timeout">测量超时，请重新测量！</string>
    <string name="lead_layout">导联类型</string>
    <string name="get_hr">获取心率</string>
    <string name="please_access">接入</string>
    <string name="pole_off">导联脱落</string>
    <string name="please_lead_access">接入导联</string>
    <string name="install_electrodes">安装电极</string>
    <string name="view_report">查看报告</string>
    <string name="wave_velocity">波速</string>
    <string name="amplitude">波幅</string>
    <string name="ecg_hr">心率</string>
    <string name="HR">HR</string>
    <string name="P">P</string>
    <string name="pr">PR</string>
    <string name="qrs">QRS</string>
    <string name="qtQtc">QT/QTC</string>
    <string name="P_QRS_T">P/QRS/T</string>
    <string name="rv5Sv1">RV5/SV1</string>
    <string name="rv5Sv1Add">RV5+SV1</string>
    <string name="ecg_hr_unit">次/分钟</string>
    <string name="qt_qtc_interval">QT/QTC间隔:</string>
    <string name="pr_interval">PR间隔:</string>
    <string name="p_qrs_t">P/qrs/T轴:</string>
    <string name="qrs_interval">QRS间隔:</string>
    <string name="rv5_sv1">RV5/SV1:</string>
    <string name="rv5__sv1">RV5+SV1:</string>
    <string name="ecg_diagnose_result">诊断结果:</string>
    <string name="ecg_title_I">I</string>
    <string name="ecg_title_II">II</string>
    <string name="ecg_title_III">III</string>
    <string name="ecg_title_AVR">AVR</string>
    <string name="ecg_title_AVL">AVL</string>
    <string name="ecg_title_AVF">AVF</string>
    <string name="ecg_title_V1">V1</string>
    <string name="ecg_title_V2">V2</string>
    <string name="ecg_title_V3">V3</string>
    <string name="ecg_title_V4">V4</string>
    <string name="ecg_title_V5">V5</string>
    <string name="ecg_title_V6">V6</string>
    <string name="ecg_title_V">V</string>
    <string name="avf"> LL</string>
    <string name="V6">V6</string>
    <string name="V5">V5</string>
    <string name="V4">V4</string>
    <string name="V3">V3</string>
    <string name="V2">V2</string>
    <string name="V1">V1</string>
    <string name="avr">RA</string>
    <string name="avl">LA</string>
    <string name="ecg_report_title">12导联心电图报告</string>
    <string name="stop_report">关闭报告</string>
    <string name="ecg_wave_data">25mm/s&#160;&#160;&#160;&#160;10mm/mV&#160;&#160;&#160;&#160;
        0.67~150Hz&#160;&#160;&#160;&#160;AC50</string>
    <string-array name="ecg_lead">
        <item>十二导联</item>
    </string-array>
    <string-array name="ecg_velocity">
        <item>5mm/s</item>
        <item>6.25mm/s</item>
        <item>10mm/s</item>
        <item>12.5mm/s</item>
        <item>25mm/s</item>
        <item>50mm/s</item>
    </string-array>
    <string-array name="ecg_amplitude">
        <item>x0.25</item>
        <item>x0.5</item>
        <item>x1</item>
        <item>x2</item>
        <item>自动</item>
    </string-array>
    <string name="spo2_pls_install_probe">连接一体机</string>
    <string name="spo2_pls_insert_finger">探头夹住手指</string>
    <string name="before_glu">空腹血糖</string>
    <string name="after_glu">餐后血糖</string>
    <string name="link_device">连接一体机</string>
    <string name="plan_cdv">准备试纸</string>
    <string name="blood_verify">采血校验</string>
    <string name="red_blood_cells_backlog_value">红细胞压积值</string>
    <string name="connect_the_detector">准备仪器和试纸</string>
    <string name="blood_test">采血检测</string>
    <string name="trig">甘油三酯</string>
    <string name="ldl">低密度脂蛋白</string>
    <string name="hdl">高密度脂蛋白</string>
    <string name="insert_the_strip">插入试纸条采血</string>
    <string name="begin_measure">开始检测</string>
    <string name="link_detector">连接检测仪</string>
    <string name="reagent_for_blood_sampling">试剂片采集血样</string>
    <string name="nibp_sys">收缩压</string>
    <string name="nibp_dia">舒张压</string>
    <string name="nibp_cuff">袖带压:</string>
    <string name="nibp_setting">血压设置</string>
    <string name="nibbp_result_1">测量失败,袖带太松</string>
    <string name="nibbp_result_2">测量失败,系统漏气</string>
    <string name="nibbp_result_3">测量失败,空气压力错</string>
    <string name="nibbp_result_4">测量失败,信号弱</string>
    <string name="nibbp_result_5">测量失败,测量超范围</string>
    <string name="nibbp_result_6">测量失败,信号干扰</string>
    <string name="nibbp_result_7">测量失败,袖带压力过大</string>
    <string name="nibbp_result_8">测量失败,信号饱和</string>
    <string name="nibbp_result_9">测量失败,漏气检测失败</string>
    <string name="nibbp_result_10">测量失败,系统故障</string>
    <string name="nibbp_result_11">测量失败,袖带类型错误</string>
    <string name="nibbp_result_12">测量失败,测量超时</string>
    <string name="nibbp_result_13">漏气检测通过</string>
    <string name="nibp_connect_healthone">连接一体机</string>
    <string name="nibp_bind_cuff">正确捆绑袖带</string>
    <string name="nibp_calibrate">校准</string>
    <string name="nibp_stop_calibrate">停止校准</string>
    <string name="nibp_leak_test">漏气检测</string>
    <string name="nibp_stop_leak_test">停止漏气检测</string>
    <string name="nibp_reset">复位</string>
    <string name="nibp_introduction_2">2.将袖带正确捆绑在用户的上臂，袖带缠绕上臂不应太紧，以能够插入两个手指为宜。袖带上标记↓的位置应置于动脉处</string>
    <string name="nibp_introduction_1">1.从附件包中取出血压袖带延长线，与血压袖带接好，将延长线插头插入一体机左侧的NIBP接口</string>
    <string name="flag_down_pic">↓</string>
    <string name="temp_pls_install_probe">连接额温枪</string>
    <string name="temp_pls_move_to_head">对准额头中央</string>
    <string name="irtemp_introduction_1">1.从附件包中找出额温枪，将插头插入一体机左侧的T1插口</string>
    <string name="temp_introduction_2">2.额温枪对准额头中央，距离3厘米左右，按下测量键</string>
    <string name="unit_times_per_minute">bpm</string>
    <string name="unit_mmhg">mmHg</string>
    <string name="unit_percent">%</string>
    <string name="unit_temp">℃</string>
    <string name="unit_mmol_l">mmol/L</string>
    <string name="unit_index">*10^9/L</string>
    <string name="unit_cells">Cells/μL</string>
    <string name="unit_umol">μmol/L</string>
    <string name="unit_gl">g/L</string>
    <string name="unit_kg">kg</string>
    <string name="unit_cm">cm</string>
    <string name="unit_mg_dl">mg/dL</string>
    <string name="unit_mg_l">mg/L</string>
    <string name="unit_mmol_mol">mmol/mol</string>
    <string name="unit_divide">/</string>
    <string name="unit_ms">ms</string>
    <string name="unit_mv">mV</string>
    <string name="unit_limit">°</string>
    <string name="urt_check_fourteen">14项尿常规检查</string>
    <string name="urt_check_eleven">11项尿常规检查</string>
    <string name="urt_check">%s项尿常规检查</string>
    <string name="num">序号</string>
    <string name="refer_value_name">参考值</string>
    <string name="result_unit">单位</string>
    <string name="result_flag">标志</string>
    <string name="result">结果</string>
    <string name="item_name">项目名称</string>
    <string name="item_code">项目代码</string>
    <string name="urt_code_leu">LEU</string>
    <string name="urt_code_nit">NIT</string>
    <string name="urt_code_ubg">UBG</string>
    <string name="urt_code_pro">PRO</string>
    <string name="urt_code_ph">pH</string>
    <string name="urt_code_sg">SG</string>
    <string name="urt_code_bld">BLD</string>
    <string name="urt_code_ket">KET</string>
    <string name="urt_code_bil">BIL</string>
    <string name="urt_code_glu">GLU</string>
    <string name="urt_code_vc">VC</string>
    <string name="urt_code_ma">MA</string>
    <string name="urt_code_cr">Cr</string>
    <string name="urt_code_ca">Ca</string>
    <string name="urt_code_ac">AC</string>
    <string name="urt_name_leu">白细胞</string>
    <string name="urt_name_nit">亚硝酸盐</string>
    <string name="urt_name_ubg">尿胆原</string>
    <string name="urt_name_pro">蛋白质</string>
    <string name="urt_name_ph">pH值</string>
    <string name="urt_name_sg">比重</string>
    <string name="urt_name_bld">潜血</string>
    <string name="urt_name_bld_u120">隐血</string>
    <string name="urt_name_ket">酮体</string>
    <string name="urt_name_bil">胆红素</string>
    <string name="urt_name_glu">葡萄糖</string>
    <string name="urt_name_vc">维生素C</string>
    <string name="urt_name_vc_u120">抗坏血酸</string>
    <string name="urt_name_ma">微量白蛋白</string>
    <string name="urt_name_cr">肌酐</string>
    <string name="urt_name_ca">钙离子</string>
    <string name="urt_name_ac">A:C</string>
    <string name="uri_reference_value">阴性(-)</string>
    <string name="uri_default_value">-</string>
    <string name="save">保存</string>
    <string name="tips_input_weight">说明:请手动输入体重，保存</string>
    <string name="leu">白细胞[LEU]</string>
    <string name="standard_">-</string>
    <string name="ca">钙离子[Ca]</string>
    <string name="ac">A:C</string>
    <string name="cr">肌酐[Cr]</string>
    <string name="ma">微量白蛋白[MA]</string>
    <string name="vc">维生素C[VC]</string>
    <string name="glu2">葡萄糖[GLU]</string>
    <string name="bil">胆红素[BIL]</string>
    <string name="ket">酮体[KET]</string>
    <string name="bld">潜血[BLD]</string>
    <string name="sg">比重[SG]</string>
    <string name="ph">pH值[pH]</string>
    <string name="pro">蛋白质[PRO]</string>
    <string name="ubg">尿胆原[UBG]</string>
    <string name="nit">亚硝酸盐[NIT]</string>
    <string name="ph_standard_value">4.6~8.0</string>
    <string name="sg_standard_value">1.015~1.025</string>
    <string name="table_num">序号</string>
    <string name="table_time">时间</string>
    <string name="table_value_1">值1</string>
    <string name="table_value_2">值2</string>
    <string name="table_value_3">值3</string>
    <string name="table_value_4">值4</string>
</resources>