<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="576dp"
    android:layout_height="@dimen/px34"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_serial"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp15"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_num"
        android:textColor="@color/measureMax"
        android:textSize="@dimen/px18" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="@dimen/px34"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/table_time"
        android:textColor="@color/measureMax"
        android:textSize="@dimen/px18" />

    <TextView
        android:id="@+id/tv_value1"
        android:layout_width="0dp"
        android:layout_height="@dimen/px34"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/table_value_1"
        android:textColor="@color/measureMax"
        android:textSize="@dimen/px18" />

    <TextView
        android:id="@+id/tv_value2"
        android:layout_width="0dp"
        android:layout_height="@dimen/px34"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/table_value_2"
        android:textColor="@color/measureMax"
        android:textSize="@dimen/px18"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_value3"
        android:layout_width="0dp"
        android:layout_height="@dimen/px34"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/table_value_3"
        android:textColor="@color/measureMax"
        android:textSize="@dimen/px18"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_value4"
        android:layout_width="0dp"
        android:layout_height="@dimen/px34"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/table_value_4"
        android:textColor="@color/measureMax"
        android:textSize="@dimen/px18"
        android:visibility="gone" />

</LinearLayout>