<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="400px"
             android:layout_height="match_parent"
             android:background="@drawable/rounded_rectangle"
             android:orientation="vertical">

    <TableRow android:layout_margin="@dimen/px10">

        <TextView
            android:text="@string/urine"
            android:textColor="@color/measure_name_text_color"/>
    </TableRow>

    <TableRow
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10">

        <TextView
            android:layout_width="0dp"
            android:layout_marginBottom="@dimen/px10"
            android:layout_marginTop="@dimen/px5"
            android:layout_weight="1.3"
            android:text="@string/item_name"
            android:textColor="@color/menuText_nor"/>

        <TextView
            android:layout_width="0dp"
            android:layout_marginBottom="@dimen/px5"
            android:layout_marginTop="@dimen/px5"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/result"
            android:textColor="@color/menuText_nor"/>

        <TextView
            android:layout_width="0dp"
            android:layout_marginBottom="@dimen/px5"
            android:layout_marginTop="@dimen/px5"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/refer_value_name"
            android:textColor="@color/menuText_nor"/>
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/leu"/>

        <TextView
            android:id="@+id/tv_leu_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/nit"/>

        <TextView
            android:id="@+id/tv_nit_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/ubg"/>

        <TextView
            android:id="@+id/tv_ubg_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/pro"/>

        <TextView
            android:id="@+id/tv_pro_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/ph"/>

        <TextView
            android:id="@+id/tv_ph_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:id="@+id/tv_ph_min_max"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ph_standard_value"/>
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/sg"/>

        <TextView
            android:id="@+id/tv_sg_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:id="@+id/tv_sg_min_max"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sg_standard_value"/>
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_uri_bld_name"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/bld"/>

        <TextView
            android:id="@+id/tv_bld_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/ket"/>

        <TextView
            android:id="@+id/tv_ket_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/bil"/>

        <TextView
            android:id="@+id/tv_bil_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/glu2"/>

        <TextView
            android:id="@+id/tv_urine_glu_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>

    <TableRow
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_vc_name"
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/vc"/>

        <TextView
            android:id="@+id/tv_vc_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>

    <TableRow
        android:id="@+id/tr_urine_ma"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/ma"/>

        <TextView
            android:id="@+id/tv_ma_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:id="@+id/tv_ma_reference"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>

    <TableRow
        android:id="@+id/tr_urine_cr"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/cr"/>

        <TextView
            android:id="@+id/tv_cr_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:id="@+id/tv_cr_reference"

            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>

    <TableRow
        android:id="@+id/tr_urine_ca"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/ca"/>

        <TextView
            android:id="@+id/tv_ca_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:id="@+id/tv_ca_reference"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>
    <TableRow
        android:id="@+id/tr_urine_ac"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/px10"
        android:layout_marginRight="@dimen/px10"
        android:layout_weight="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1.3"
            android:text="@string/ac"/>

        <TextView
            android:id="@+id/tv_ac_value"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/invalid_data"/>

        <TextView
            android:id="@+id/tv_ac_reference"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/standard_"/>
    </TableRow>
</TableLayout>