<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/layout_margin"
                android:background="@drawable/rounded_rectangle"
                android:gravity="center"
                android:orientation="vertical">

    <LinearLayout
        android:id="@+id/value_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/measure_name_text_color"
            android:textSize="@dimen/measure_name_size"/>

        <EditText
            android:id="@+id/et_value"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:shadowColor="@color/measure_value_text_color"
            android:textColor="@color/measure_value_text_color"
            android:textSize="@dimen/measure_value_size"/>

        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/unit_kg"/>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="258px"
            android:layout_height="60px"
            android:layout_marginBottom="24px"
            android:background="@drawable/btn_selector_blue"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/menuText"
            android:textSize="24px"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/value_ll"
        android:text="@string/tips_input_weight"/>

</RelativeLayout>